--- a/index.html
+++ b/index.html
@@ -452,8 +452,7 @@
             </div>
 
             <footer class="footer">
-                <p>Группа ИД-127
-                Ещё есть бот с расписанием в телеграмме;) @ racpicaniye_bot</p>
+                <p>Группа ИД-127 Ещё есть бот  с расписанием;) @racpicaniye_bot</p>
             </footer>
         </section>
     </div>
@@ -465,20 +464,20 @@
             { name: "Валиев Марат Ренатович", category: 0, video: 0 },
             { name: "Вахмянина Дарья Александровна", category: 0, video: 0 },
             { name: "Гайнулина Карина Маратовна", category: 0, video: 0 },
-            { name: "Жуков Матвей Вадимович", category: , video: 0 },
-            { name: "Золотов Лев Олегович", category: 0, video:  },
+            { name: "Жуков Матвей Вадимович", category: 0, video: 0 },
+            { name: "Золотов Лев Олегович", category: 0, video: 0 },
             { name: "Иванов Дмитрий Станиславович", category: 0, video: 0 },
-            { name: "Конышев Сергей Павлович", category: 2, video: 2 },
+            { name: "Конышев Сергей Павлович", category: 3, video: 1 },
             { name: "Крылов Трофим Андреевич", category: 0, video: 0 },
-            { name: "Кузнецова Александра Николаевна", category: 3, video: 3 },
-            { name: "Леднев Данил Алексеевич", category: /, video: 0 },
+            { name: "Кузнецова Александра Николаевна", category: 3, video: 2 },
+            { name: "Леднев Данил Алексеевич", category: 0, video: 0 },
             { name: "Медведев Максим Денисович", category: 0, video: 0 },
             { name: "Морозова Анастасия Александровна", category: 0, video: 0 },
-            { name: "Мяконьких Валерия Денисовна", category: , video: 0 },
-            { name: "Плешков Никита Андреевич", category: 1, video: 1 },
+            { name: "Мяконьких Валерия Денисовна", category: 0, video: 0 },
+            { name: "Плешков Никита Андреевич", category: 2, video: 3 },
             { name: "Саттаров Ратмир Риянович", category: 0, video: 0 },
             { name: "Ситдиков Денис Рудамильевич", category: 0, video: 0 },
-            { name: "Тернов Валерий Алексеевич", category: Х, video: 0 },
+            { name: "Тернов Валерий Алексеевич", category: 0, video: 0 },
             { name: "Филлипов Артём Ильич", category: 0, video: 0 },
             { name: "Хозяинов Никита Алексеевич", category: 0, video: 0 },
             { name: "Цедилкин Данила Сергеевич", category: 0, video: 0 },
